fixes to scrollbars

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,7 @@
 
 * {
     font-family: 'Lato', sans-serif;
+    overflow-x: hidden;
 }
 
 a,
